lab-spring-boot/kubernetes/deployment-azure.yaml
    
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: myspringboot-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: myspringboot
    spec:
      containers:
      - name: myspringboot
        image: secondaks.azurecr.io/testaks:latest
        ports:
        - containerPort: 8081
