lab-spring-boot/kubernetes/service-azure.yaml
kind: Service
apiVersion: v1
metadata:
  name: myspringboot-service
spec:
  selector:
    app: myspringboot
  ports:
    - protocol: TCP
      targetPort: 8081
      port: 80
  type: NodePort
