lab-spring-boot/kubernetes/ingress-azure.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: party-clippy
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: myspringboot-service.kubepoc-dns-5597046f.hcp.centralus.azmk8s.io
    http:
      paths:
      - backend:
          serviceName: myspringboot-service
          servicePort: 80
        path: /
